# spotmicro_locomotion_ros2

./: README.md
launch/: spotmicro_champ_control.launch.py
spotmicro_control/: package.xml  setup.cfg  setup.py
spotmicro_control/config/gait/: gait.yaml
spotmicro_control/launch/: spotmicro_champ_control.launch.py
spotmicro_control/resource/: spotmicro_locomotion_ros2
spotmicro_control/src/spotmicro_locomotion_ros2/: __init__.py  spotmicro_champ_bridge.py
spotmicro_control/test/: test_joint_force_bridge.py
